--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 .backg{
     background:url(pictures/fons01.png) no-repeat center; 
  background-size: cover;
-    min-height: 662px;
+    min-height: 692px;
     -webkit-background-size:cover;
     -moz-background-size:cover;
     -o-background-size:cover;
+
+
 }   
 
 
@@ -289,13 +291,16 @@ background-color:rgba(208, 208, 208, 0.31);
     border-style: inset; 
 }
 .booton{
-    height: 70px;
+    height: 181px;
     width: 700px;
-    background-color: rgba(16, 126, 241, 0.43);
+    background-color:rgba(52, 90, 57, 0.48);
     position: absolute;
     right: 0;
     left: 0;
     margin: auto;
     border-radius: 10px;
+        margin-top: -16px;
     
 }
+
+/*ttttt*/
