--- a/style_media.css
+++ b/style_media.css
@@ -1,74 +1,189 @@
-/* iPads (вертикальная и горизонтальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1025px) {
-  .md_wd4{
-        margin: 0% 0% 0% 0%;
-    }
-}
-/* iPads (горизонтальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .header{
-        margin: 0% auto;
-    }
-    .md_wd4{
-        margin: 0% 0% 0% 0%;
-    }
-}
-/* iPads (вертикальная) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-      .md_wd4{
-        margin: 0% 0% 0% 0%;
-    }
-}
 
 
-@media only screen and (min-width: 320px)and (max-width:800px){ 
-    .header {
-    margin:0% -4%;
-    }  
-}
-@media (min-width: 319px) and (max-width:800px){
-.container{
-        min-width: 65rem;
-    min-height: 90rem;
-   margin:0% 0% 0% 7.5%;    }
-    .backg{
-           min-width: 708px;
-    min-height: 1244px;
-    margin: 0px 0px;  
-    }
-}
-@media (min-width: 320px) and (max-width:800px) {
-    .md_wd1{
- margin: 1% 1% 1% 19%;
-    }
-    .md_wd4{
-        margin:1% 1% 1% 19%;
-    }
-    .md_wd5{
-        margin:1% 1% 1% 3%;
-    }
-    .md_wd7{
-        margin:1% 1% 1% 19%;
-    }
-    .md_wd9{
-        margin:1% 1% 1% 2%;
-    }
-    .md_wd10{
-        margin:1% 1% 1% 19%;
-    }
-    .md_wd11{
-        margin:1% 1% 1% 4%;
-    }
-    .md_wd12{
-        margin:1% 1% 1% 2%;
-    }
-    .md_wd13{
-        margin:1% 1% 1% 19%;
-    }
-    .md_wd16{
-        margin:1% 1% 1% 19%;
+/* Smartphones (горизонтальная) ----------- */
+@media only screen and (min-width: 319px) and (max-width:767px) {
+.backg{
+    min-height: 1249px; max-height: 1247px;
+    min-width: 700px;
     }
     .content{
-      margin: 0% 0% 0% -6%;
+        max-width: 43rem;  
+        margin: 0 auto;
     }
+    .md_wd1{
+        margin: 0px auto;
+    }
+    .md_wd4{
+ margin: 0px auto;
+    }
+    .md_wd7{
+        margin: 0px auto;
+    }
+    .md_wd10{
+        margin: 0px auto;
+    }
+    .md_wd13{
+        margin: 0px auto;
+    }
+    .md_wd16{
+        margin: 0px auto;
+}
+}
+/* iPads (вертикальная и горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+.backg{
+    min-height: 1051px; 
+    min-width: 700px;
+    }
+    .md_wd1{
+        margin: 0rem 0rem 0rem 11rem;
+    }
+    .md_wd2{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd3{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd4{
+         margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd5{
+        margin: 0rem 0rem 0rem 11rem;
+    }
+    .md_wd6{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd7{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd8{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd9{
+          margin: 0rem 0rem 0rem 11rem;
+    }
+    .md_wd10{
+      margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd11{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd12{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd13{
+      margin: 0rem 0rem 0rem 11rem;
+    }
+    .md_wd14{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd15{
+      margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd16{
+      margin: 0rem 0rem 0rem 1rem;
+    }
+    .md_wd17{
+        margin: 0rem 0rem 0rem 23.5rem;
+    }
+    .md_wd18{
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    .booton{
+margin: 0 auto;
+    }
+   
+}
+
+/* iPads (горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+.backg{
+   min-height: 910px; 
+    min-width: 700px;
+    }
+}
+
+/* iPads (вертикальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+.backg{
+    min-height: 1051px; 
+    min-width: 700px;
+    }
+}
+/* Smartphones (вертикальная) ----------- */
+@media only screen and (max-width: 320px) {
+
+}
+/* iPad 3**********/
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+/* стили */
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+/* стили */
+}
+
+/* Настольные компьютеры и ноутбуки ----------- */
+@media only screen  and (min-width: 1224px) {
+/* стили */
+}
+
+/* Большие экраны ----------- */
+@media only screen  and (min-width: 1824px) {
+/* стили */
+}
+
+/* iPhone 4 ----------- */
+@media only screen and (min-width: 320px) and (max-width: 480px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+/* стили */
+}
+@media only screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+/* стили */
+}
+
+/* iPhone 5 ----------- */
+@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2){
+    
+}
+@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+
+/* iPhone 6 ----------- */
+@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+
+/* iPhone 6+ ----------- */
+@media only screen and (min-width: 414px) and (max-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+@media only screen and (min-width: 414px) and (max-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+
+/* Samsung Galaxy S3 ----------- */
+@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2){
+/* стили */
+}
+
+/* Samsung Galaxy S4 ----------- */
+@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3){
+/* стили */
+}
+@media only screen and (min-width: 320px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3){
+/* стили */
+}
+
+/* Samsung Galaxy S5 ----------- */
+@media only screen and (min-width: 360px) and (max-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3){
+/* стили */
+}
+@media only screen and (min-width: 360px) and (max-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3){
+/* стили */
 }
